# modDR

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yaml  tox.ini  utils.py
.github/: ISSUE_TEMPLATE.md
data/interim/: results_20250314-131448.npy  results_20250323-141832.npy  results_20250327-171811.pickle  tsne_results.npy  umap_results.npy
docs/: Makefile  api.rst  api_embeddingstate.rst  api_evaluation.rst  api_index.rst  api_processing.rst  api_visualization.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: moddr_example_uci17.ipynb  moddr_example_uci186.ipynb  moddr_example_uci485.ipynb  moddr_example_uci50.ipynb
moddr/: __init__.py  embedding_state.py  utils.py
moddr/evaluation/: evaluation.py
moddr/processing/: processing.py
moddr/visualization/: visualization.py
src/: __init__.py  dash_app.py  dash_overlay.py  embedding_obj.py  embeddingstate.py  evaluation.py  processing.py  utils.py  visualization.py
src/notebook/: 20250417_notebook_uci186_local_louvain.ipynb  20250417_notebook_uci50_local_louvain.ipynb  20250427_notebook_uci50_global_fd.ipynb  notebook.ipynb  notebook_global_fd_uci186_20250427.ipynb  notebook_global_fd_uci50_20250427.ipynb  notebook_local_kawai_uci186_20250427.ipynb  notebook_multilevel_dr_20250512.ipynb  notebook_multilevel_dr_uci159_20250512.ipynb  notebook_multilevel_dr_uci186_20250512.ipynb  notebook_multilevel_dr_uci360_20250512.ipynb  notebook_multilevel_graph_20250512.ipynb  notebook_uci186_20250408.ipynb  notebook_uci50_20250408.ipynb  notebook_uci50_louvain_20250413.ipynb
tests/: __init__.py  test_evaluation.py  test_ma.py  test_processing.py
