[build-system]
requires = ["setuptools>=61.0"]
requires-python = ">=3.9"
build-backend = "setuptools.build_meta"

[project]
name = "ma"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Konstantin Haupt", email = "konstantin.haupt@study.hs-duesseldorf.de"}
]
maintainers = [
  {name = "Konstantin Haupt", email = "konstantin.haupt@study.hs-duesseldorf.de"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/kohaupt/ma/issues"
changelog = "https://github.com/kohaupt/ma/blob/master/changelog.md"
homepage = "https://github.com/kohaupt/ma"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

# Ruff
# ----

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[dependency-groups]
dev = [
    "idx2numpy>=1.2.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "numpy==1.26.0",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
    "uv>=0.5.26",
]

