[build-system]
requires = ["setuptools>=61.0"]
requires-python = ">=3.9"
build-backend = "setuptools.build_meta"

[project]
name = "modDR"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
    { name = "Konstantin Haupt", email = "konstantin.haupt@study.hs-duesseldorf.de" }
]
maintainers = [
    { name = "Konstantin Haupt", email = "konstantin.haupt@study.hs-duesseldorf.de" }
]
classifiers = [

]
license = { text = "MIT license" }
dependencies = [

]

[project.optional-dependencies]
dev = [
    "coverage", # testing
    "mypy", # linting
    "pytest", # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/kohaupt/modDR/issues"
changelog = "https://github.com/kohaupt/modDR/blob/master/changelog.md"
homepage = "https://github.com/kohaupt/modDR"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

# Ruff
# ----

[tool.ruff]
line-length = 88  # oder was du brauchst

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
]
extend-select = ["E501"]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = ["attr-defined", "import-untyped"]

[[tool.mypy.overrides]]
module = "src.*"
disable_error_code = ["import-untyped"]


[dependency-groups]
dev = [
    "bokeh>=3.4.3",
    "colorcet>=3.1.0",
    "dash>=2.18.2",
    "datashader>=0.17.0",
    "holoviews>=1.20.1",
    "idx2numpy>=1.2.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.4",
    "mypy>=1.15.0",
    "networkx>=3.0",
    "numpy==1.26.0",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydrmetrics>=0.0.7",
    "pytest>=8.3.4",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "umap-learn>=0.5.7",
    "uv>=0.5.26",
]
